# Newton-s_Method-main

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/newtonsmethod/: newtons_method.py
tests/: test_newtons_method.py
tutorials/: tutorial.ipynb
